Added a dynamic range facet on timestamps in log index.